tests/fixtures/pass/add_trait_nominal_i32_scalar_output.sali
let Add(Rhs: type) = trait {
  let Output: type
  let add(move self)(move rhs: Rhs): Output
}

let Number = struct(value: i32)

extend Number: Add(i32) {
  let Output = i32
  let add(move self)(move rhs: i32): i32 = self.value + rhs
}

let main(): i32 = Number(40) + 2
