tests/fixtures/fail/add_trait_rhs_mismatch.sali
let Number = struct(value: i32)
let Offset = struct(value: i32)

extend Number: Add(i32) {
  let Output = i32
  let add(move self)(move rhs: i32): i32 = self.value + rhs
}

let main(): i32 = Number(40) + Offset(2)
